**Subject:** 🚀 优化构建流程实现体积瘦身，新增倒排索引搜索
**Body:**
* **构建优化**：引入 `jlink` + `jpackage` 流程，将安装包从 90MB 压至 **45MB**；精简 Guava 等冗余依赖。
* **性能提升**：实现 `ChatSearchEngine` 内存倒排索引（Bi-gram 分词），搜索 5000+ 消息不再卡顿。
* **Bug 修复**：恢复多提供商 API 设置面板；修复窗口左上角 `.ico` 图标加载逻辑。
* **规范化**：新增 `module-info.java` 与 `package.ps1` 脚本，更新 `AIguide.md` 进度。